rizika pro malo smluv

--- a/Web.Statu/Views/Kindex/Detail_child.cshtml
+++ b/Web.Statu/Views/Kindex/Detail_child.cshtml
@@ -89,7 +89,8 @@
 {
 <div class="row">
     <div class="col-xs-12">
-        <div class="bg-danger center-block text-center" style="border-radius:6px;font-weight: bold; font-size: 1.1em; padding: 1em;">Toto jsou předběžné, NEVEŘEJNÉ výsledky pouze pro vás. Nejsou určeny pro zveřejnění a šíření. Odkaz je unikátní a může kdykoliv přestat fungovat.</div>
+        <div class="bg-danger center-block text-center" style="border-radius:6px;font-weight: bold; font-size: 1.1em; padding: 1em;">Toto jsou předběžné, NEVEŘEJNÉ výsledky pouze pro vás. Nejsou určeny pro zveřejnění a šíření. Odkaz je unikátní a může kdykoliv přestat fungovat.
+        Výpočet K-Indexu je proveden podle nové metodiky, a to nejen pro rok 2020, ale i roky předchozí.</div>
     </div>
 </div>
 }
