Index page performance (statni weby and sponzori removed)

--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -15,9 +15,9 @@
     ViewBag.HideAd = true;
 
 
-    double platnych = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[0];
-    double neplatnych = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[1];
-    double celkemKc = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[2];
+    //double platnych = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[0];
+    //double neplatnych = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[1];
+    //double celkemKc = HlidacStatu.Lib.StaticData.BasicStatisticData.Get()[2];
 
     var data = covid_pomoc.VsechnaPomoc();
 
@@ -500,237 +500,6 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
                 <a href="/verejnezakazky" class="btn btn-default btn-default-new">zobrazit více v hlídači veřejných zakázek</a>
             </div>
         </div>
-
-
-        <!-- block Sponzori -->
-        <div class="watcher-block">
-            <div class="watcher__title">
-                <img src="/Content/img/icon-finance.svg">
-                <h2 class="new-title">
-                    Hlídač sponzorů
-                </h2>
-            </div>
-
-            <div class="block-col ">
-                <p>
-                    Informace o osobních a firemních sponzorech politických stran, hnutí
-                </p>
-            </div>
-
-            <div class="block-col block-part">
-                <div class="block-subtitle">
-                    Největší sponzoři za poslední rok
-                </div>
-                <div class="block-table">
-                    @{
-                        foreach (var sponzor in
-                            HlidacStatu.Lib.Data.Sponsors.AllSponzorsPerYearPerStranaOsoby
-                            .Get()
-                            .GroupBy(g => g.Strana, sp => sp, (g, sp) => sp.OrderByDescending(o => o.CastkaCelkem).First())
-                            .Where(w => HlidacStatu.Lib.Data.Sponsors.TopStrany.Contains(w.Strana))
-                            )
-                        {
-                            <div class="table-row">
-                                <div class="table-col">@Html.Raw(HlidacStatu.Util.RenderData.ShortNicePrice(sponzor.CastkaCelkem, html: true))</div>
-                                <div class="table-col"><a href="@sponzor.Sponzor.GetUrl(true)">@sponzor.Sponzor.FullName()</a> pro @sponzor.Strana</div>
-                            </div>
-                        }
-
-                    }
-
-                </div>
-                <a href="/sponzori" class="link">Další transakce</a>
-            </div>
-
-            <div class="block-button-wrapper">
-                <a href="/sponzori" class="btn btn-default btn-default-new">zobrazit více v hlídači financí</a>
-            </div>
-        </div>
-
-        <!-- block  weby -->
-        <div class="watcher-block">
-            <div class="watcher__title">
-                <img src="/Content/img/icon-pc.svg">
-                <h2 class="new-title">
-                    Hlídač webů
-                </h2>
-            </div>
-            <div class="block-col ">
-                <p>
-                    Informace o dostupnosti a funkčnosti státních webů
-                    <br>
-                    Hlídáme <strong>@(ZabTools.Weby()?.Count())</strong> státních webů
-                </p>
-            </div>
-
-            <div class="block-row block-part">
-                <div class="block-col block-col--50">
-                    <div class="block-subtitle">
-                        Vybrané důležité služby v posledních 15 minutách
-                    </div>
-                    <ul class="block-status-list">
-                        @{
-                            var dataWeby = ZabTools.WebyDataLastHour("0")
-                                ?.OrderBy(o => o.Host.publicname)
-                                ?.Reverse()
-                                ?.ToList();
-                            List<ZabHostAvailability> stats
-                                = new List<ZabHostAvailability>();
-
-                            stats = dataWeby
-                            ?.OrderBy(o => o.Statistics().PercentOfTime.OK)
-                            ?.Take(10)
-                            ?.ToList() ?? new List<ZabHostAvailability>();
-
-                            decimal dynamicLength = 9m;
-                        }
-                        @foreach (var wkv in stats.OrderByDescending(w => w.WorstStatus(TimeSpan.FromMinutes(15))))
-                        {
-                            var statusWK = wkv.WorstStatus(TimeSpan.FromMinutes(15));
-                            switch (statusWK)
-                            {
-                                case Statuses.Pomalé:
-                                    dynamicLength -= 1.5m;
-                                    <li class="status-item status-item--warning">
-                                        <div class="status-row">
-                                            <div class="status-point"></div>
-                                            <a href="/statniweby/info/@(wkv.Host.hostid)?h=@(wkv.Host.hash)" class="">@wkv.Host.publicname</a>
-                                        </div>
-                                        <div class="status-row--message">
-                                            Pomalá odezva
-                                        </div>
-                                    </li>
-                                    break;
-                                case Statuses.Nedostupné:
-                                case Statuses.TimeOuted:
-                                case Statuses.BadHttpCode:
-                                    dynamicLength -= 1.5m;
-                                    <li class="status-item status-item--error">
-                                        <div class="status-row">
-                                            <div class="status-point"></div>
-                                            <a href="/statniweby/info/@(wkv.Host.hostid)?h=@(wkv.Host.hash)" class="">@wkv.Host.publicname</a>
-                                        </div>
-                                        <div class="status-row--message">
-                                            Nepracuje správně
-                                        </div>
-                                    </li>
-
-                                    break;
-                                case Statuses.OK:
-                                case Statuses.Unknown:
-                                    dynamicLength -= 1m;
-                                    <li class="status-item">
-                                        <div class="status-row">
-                                            <div class="status-point"></div>
-                                            <a href="/statniweby/info/@(wkv.Host.hostid)?h=@(wkv.Host.hash)" class="">@wkv.Host.publicname</a>
-                                        </div>
-                                    </li>
-                                    break;
-                                default:
-                                    break;
-                            }
-                            if (dynamicLength <= 0)
-                            {
-                                break;
-                            }
-                        }
-
-                    </ul>
-                    <a href="/statniweby" class="link">Další weby</a>
-                </div>
-                <!-- right col ssl -->
-                <div class="block-col block-col--50">
-                    <div class="block-subtitle">
-                        Weby s nejhorším HTTPS
-                    </div>
-                    <ul class="block-status-list">
-
-                        @{
-                            var webIds = ZabTools.Weby("0").Select(w => w.hostid).ToArray(); //ustredni
-                            var sslWebs = ZabTools.SslStatuses()
-                                ?.Where(m => webIds.Contains(m.Host.hostid))
-                                ?.Where(m => m.Status() >= SSLLabsGrades.B)
-                                ?.OrderByDescending(m => m.Status())
-                                ?.Take(15)
-                                ?.ToArray()
-                                ?.OrderBy(o => Guid.NewGuid())
-                                ?.Take(5)
-                                ?.ToArray() ?? new ZabHostSslStatus[0];
-
-
-                            if (sslWebs.Count() < 6)
-                            {
-                                webIds = ZabTools.Weby("ustredni").Select(w => w.hostid).ToArray(); //ustredni
-                                sslWebs = sslWebs.Concat(ZabTools.SslStatuses()
-                                            ?.Where(m => webIds.Contains(m.Host.hostid))
-                                            ?.Where(m => m.Status() >= SSLLabsGrades.B)
-                                            ?.OrderByDescending(m => m.Status())
-                                            ?.Take(10)
-                                            ?.ToArray()
-                                            ?.OrderBy(o => Guid.NewGuid())
-                                            ?.Take(5)
-                                            ?.ToArray() ?? new ZabHostSslStatus[0]
-                                        )
-                                        .ToArray();
-                            }
-                            dynamicLength = 9m;
-                        }
-                        @foreach (var item in sslWebs.OrderByDescending(o => o.Status()).Take(5))
-                        {
-                            switch (item.Status())
-                            {
-                                case SSLLabsGrades.B:
-                                case SSLLabsGrades.C:
-                                case SSLLabsGrades.D:
-                                case SSLLabsGrades.E:
-                                    dynamicLength -= 1.5m;
-                                    <li class="status-item status-item--warning">
-                                        <div class="status-row">
-                                            <div class="status-point"></div>
-                                            <a href="/statniweby/info/@(item.Host.hostid)?h=@(item.Host.hash)" class="">@item.Host.publicname</a>
-                                        </div>
-                                        <div class="status-row--message">
-                                            <b>@item.Status().ToNiceDisplayName()</b> -
-                                            @Devmasters.TextUtil.ShortenText(ZabTools.StatusDescription(item.Status().Value, false), 30)
-                                        </div>
-                                    </li>
-
-                                    break;
-                                case SSLLabsGrades.F:
-                                case SSLLabsGrades.M:
-                                case SSLLabsGrades.T:
-                                case SSLLabsGrades.X:
-                                    dynamicLength -= 1.5m;
-                                    <li class="status-item status-item--error">
-                                        <div class="status-row">
-                                            <div class="status-point"></div>
-                                            <a href="/statniweby/info/@(item.Host.hostid)?h=@(item.Host.hash)" class="">@item.Host.publicname</a>
-                                        </div>
-                                        <div class="status-row--message">
-                                            <b>@item.Status().ToNiceDisplayName()</b> -
-                                            @Devmasters.TextUtil.ShortenText(ZabTools.StatusDescription(item.Status().Value, false), 30)
-                                        </div>
-                                    </li>
-
-                                    break;
-                                default:
-                                    break;
-                            }
-
-
-                        }
-                    </ul>
-                    <a href="/StatniWeby/Https" class="link">Další info o HTTPS</a>
-                </div>
-            </div>
-
-            <div class="block-button-wrapper">
-                <a href="/StatniWeby" class="btn btn-default btn-default-new">zobrazit více v Hlídači webů</a>
-            </div>
-        </div>
-
-
-
     </div>
 </div>
 
