--- a/Web.Statu/Views/Beta/Search.cshtml
+++ b/Web.Statu/Views/Beta/Search.cshtml
@@ -252,7 +252,7 @@
 
     </div>
     <div class="col-md-12">
-        @WebUtil.FeedbackModal("Poslat opravu či připomínku")
+        @WebUtil.FeedbackModal("Upozornit na chybu či připomínku")
 
     </div>
 
