--- a/Web.Statu/Views/Home/Detail.cshtml
+++ b/Web.Statu/Views/Home/Detail.cshtml
@@ -421,7 +421,7 @@
 
         </tbody>
     </table>
-    @WebUtil.FeedbackModal("Poslat opravu či připomínku")
+    @WebUtil.FeedbackModal("Upozornit na chybu")
 
 
 
