--- a/Web.Statu/Views/Home/Report.cshtml
+++ b/Web.Statu/Views/Home/Report.cshtml
@@ -262,6 +262,6 @@ XINTEXT (0->0.7mld),
 }
 else
 {
-    @WebUtil.FeedbackModal("Poslat opravu či připomínku")
+    @WebUtil.FeedbackModal("Upozornit na chybu")
 }
 
