--- a/Web.Statu/Views/Osoby/hledat.cshtml
+++ b/Web.Statu/Views/Osoby/hledat.cshtml
@@ -51,7 +51,7 @@
 
 
 
-@WebUtil.FeedbackModal("Poslat opravu či připomínku")
+@WebUtil.FeedbackModal("Upozornit na chybu")
 
 @Html.Partial("~/Views/Home/_PolitikDisclaimer.cshtml", this.ViewData)
 
