--- a/Web.Statu/Views/Sponzori/Strana.cshtml
+++ b/Web.Statu/Views/Sponzori/Strana.cshtml
@@ -101,7 +101,7 @@
 }
     @Html.CachedAction( HtmlExtensions.CachedActionLength.Cache48H, "Top_Child",model, (string)ViewBag.Strana)
 
-    @WebUtil.FeedbackModal("Poslat opravu či připomínku")
+    @WebUtil.FeedbackModal("Upozornit na chybu")
 
 
 
