--- a/Web.Statu/Views/Subjekt/Rizika.cshtml
+++ b/Web.Statu/Views/Subjekt/Rizika.cshtml
@@ -28,6 +28,15 @@
 
     }
 
+            <div style="padding-top:35px;">
+            <i class="fas fa-info-circle fa-2x fa-pull-left"></i>
+            <span class="text-muted small">
+                Toto je výstup <i>Automatické kontroly rizik</i> transparentnosti a hospodaření u uzavřených smluv prováděný Hlídačem státu.
+                Závěry kontroly nedokazují pochybení či porušení zákona na žádné straně smluvních vztahů.
+                Zjištěná rizika znamenají pouze vyšší možnost výskytu námi posuzovaných a identifikovaných situací u analyzovaných smluv.
+            </span>
+        </div>
+
 </div>
 
 
@@ -68,7 +77,7 @@
                         Toto je výstup <i>Automatické kontroly rizik</i> transparentnosti a hospodaření u uzavřených smluv prováděný Hlídačem státu.
                         <ol>
                             <li>Závěry kontroly nedokazují pochybení či porušení zákona na žádné straně smluvních vztahů.</li>
-                            <li>Zjištěná rizika znamenají pouze vyšší možnost výskytu námi posuzovaných a identifikovaných situací ve srovnání s jinými subjekty.</li>
+                            <li>Zjištěná rizika znamenají pouze vyšší možnost výskytu námi posuzovaných a identifikovaných situací u analyzovaných smluv.</li>
                             <li>Kontrola jako celek má sloužit jako vstup pro lepší nastavení vnitřních kontrolních postupů či snadnější nalezení vzniklých chyb.</li>
                         </ol>
                         
