--- a/Web.Statu/Views/Subjekt/_rizikoPart.cshtml
+++ b/Web.Statu/Views/Subjekt/_rizikoPart.cshtml
@@ -16,12 +16,16 @@
 
     var statistics = firma.StatistikaRegistruSmluv().StatisticsForYear(rok) ;
     var kindex = firma.Kindex()?.ForYear(rok);
+
+    string query = "";
 }
 
 @if (statistics.PercentSmluvBezCeny > 0)
 {
+    query = System.Net.WebUtility.UrlEncode($"ico:{Model.firma.ICO} AND ( issues.issueTypeId:100 ) AND datumUzavreni:[{rok}-01-01 TO {rok + 1}-01-01}}");//
     <p>
-        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercentBezCeny, statistics.PercentSmluvBezCeny).AsRiziko());padding-right:20px;"></i> <b>Počet uzavřených smluv bez uvedené ceny</b>
+        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercentBezCeny, statistics.PercentSmluvBezCeny).AsRiziko());padding-right:20px;"></i> 
+        <b>Počet uzavřených smluv bez uvedené ceny</b> <a href="/HledatSmlouvy?Q=@query"><i class='fas fa-link'></i></a>
         <br />
         <span style="padding-left:40px;">
             @Html.Raw(
@@ -29,7 +33,7 @@
                             KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercentBezCeny, statistics.PercentSmluvBezCeny, statistics.PocetSmluv).AsRiziko()
                         )
                     ),
-            celkem <b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvBezCeny, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b>
+            celkem <a href="/HledatSmlouvy?Q=@query"><b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvBezCeny, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b></a>
             bez uvedené ceny.
             <span>Tj. @HlidacStatu.Util.RenderData.NicePercent(statistics.PercentSmluvBezCeny) z celkového počtu.</span>
         </span>
@@ -37,8 +41,9 @@
 }
 @if (statistics.PocetSmluvULimitu > 0)
 {
+    query = System.Net.WebUtility.UrlEncode($"ico:{Model.firma.ICO} AND ( hint.smlouvaULimitu:>0 ) AND datumUzavreni:[{rok}-01-01 TO {rok + 1}-01-01}}");//
     <p>
-        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSmluvUlimitu, statistics.PercentSmluvULimitu).AsRiziko());padding-right:20px;"></i> <b>Smlouvy s cenou těsně pod limitem pro veřejné zakázky</b>
+        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSmluvUlimitu, statistics.PercentSmluvULimitu).AsRiziko());padding-right:20px;"></i> <b>Smlouvy s cenou těsně pod limitem pro veřejné zakázky</b> <a href="/HledatSmlouvy?Q=@query"><i class='fas fa-link'></i></a>
         <br />
         <span style="padding-left:40px;">
             @Html.Raw(
@@ -46,7 +51,7 @@
                             KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSmluvUlimitu, statistics.PercentSmluvULimitu, statistics.PocetSmluv).AsRiziko()
                         )
                     ),
-            celkem <b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvULimitu, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b>
+            celkem <a href="/HledatSmlouvy?Q=@query"><b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvULimitu, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b></a>
             bez uvedené ceny.
             <span>Tj. @HlidacStatu.Util.RenderData.NicePercent(statistics.PercentSmluvULimitu) z celkového počtu.</span>
         </span>
@@ -54,8 +59,9 @@
 }
 @if (statistics.PocetSmluvSeZasadnimNedostatkem > 0)
 {
+    query = System.Net.WebUtility.UrlEncode($"ico:{Model.firma.ICO} AND ( chyby:zasadni ) AND datumUzavreni:[{rok}-01-01 TO {rok + 1}-01-01}}");//
     <p>
-        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSeZasadnimNedostatkem, statistics.PercentSmluvSeZasadnimNedostatkem).AsRiziko());padding-right:20px;"></i> <b>Smlouvy se zásadními nedostatny</b>
+        <i class="fas fa-exclamation-circle" style="color:@HlidacStatu.Lib.Analysis.Riziko.RizikoColor(KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSeZasadnimNedostatkem, statistics.PercentSmluvSeZasadnimNedostatkem).AsRiziko());padding-right:20px;"></i> <b>Smlouvy se zásadními nedostatny</b> <a href="/HledatSmlouvy?Q=@query"><i class='fas fa-link'></i></a>
         <br />
         <span style="padding-left:40px;">
             @Html.Raw(
@@ -63,7 +69,7 @@
                             KIndexData.DetailInfo.KIndexLabelForPart(KIndexData.KIndexParts.PercSmluvUlimitu, statistics.PercentSmluvULimitu, statistics.PocetSmluv).AsRiziko()
                         )
                     ),
-            celkem <b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvSeZasadnimNedostatkem, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b>
+            celkem <a href="/HledatSmlouvy?Q=@query"><b>@HlidacStatu.Util.RenderData.Vysledky.PocetSmluv(statistics.PocetSmluvSeZasadnimNedostatkem, HlidacStatu.Util.RenderData.CapitalizationStyle.FirstLetterUpperCap)</b></a>
             bez uvedené ceny.
             <span>Tj. @HlidacStatu.Util.RenderData.NicePercent(statistics.PercentSmluvSeZasadnimNedostatkem) z celkového počtu.</span>
         </span>
@@ -97,7 +103,7 @@
     }
 
     <p>
-        <i class="fas fa-exclamation-circle" style="color:@(HlidacStatu.Lib.Analysis.Riziko.RizikoColor(lbl));padding-right:20px;"></i> <b>Koncentrace smluvních partnerů</b>
+        <i class="fas fa-exclamation-circle" style="color:@(HlidacStatu.Lib.Analysis.Riziko.RizikoColor(lbl));padding-right:20px;"></i> <b>Koncentrace smluvních partnerů</b> <a href="@query"><i class='fas fa-link'></i></a>
         <br />
         <span style="padding-left:40px;">
             @Html.Raw(HlidacStatu.Lib.Analysis.Riziko.ToHtml(lbl)),
