--- a/Web.Statu/Views/Home/Index.cshtml
+++ b/Web.Statu/Views/Home/Index.cshtml
@@ -223,8 +223,8 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fde54c', end
             </div>
             <div class="block-tags">
                     <span class="tag">
-                        <a href="/kapacitanemocnic?utm_source=homepage&utm_medium=line&utm_campaign=kapacitanemocnic">
-                            Volné kapacity intenzivní péče v nemocnicích
+                        <a href="https://platyuredniku.cz/?utm_source=homepage&utm_medium=line&utm_campaign=168h" onclick="return trackOutLink(this,'Index');">
+                            <b>Jaké platy mají úředníci českých institucí?</b>
                         </a>
                     </span>
 
