Změna textace klasifikace a dotací

--- a/Web.Statu/Views/Dotace/_SearchResult.cshtml
+++ b/Web.Statu/Views/Dotace/_SearchResult.cshtml
@@ -69,7 +69,7 @@ else
                     <div>
                         V celkové hodnotě @HlidacStatu.Util.RenderData.NicePrice((decimal)sum). <sup>*)</sup>
                         <div class="alert alert-info" role="alert">
-                            <b>*) Celková hodnota</b> je námi vypočítaná přibližná hodnota čerpaných dotací. U spousty zdrojů není tato informace správně uvedena a proto jsou v součtu vynechány.
+                            <b>*) Celková hodnota</b> je námi vypočítaná hodnota čerpaných dotací, kterou jsme získali z různých zdrojových databází. Takto získané údaje proto mohou být podle kvality vstupních dat zobrazeny v některých případech i duplicitně nebo neúplně. Veškeré údaje proto vždy doporučujeme ověřit.
                         </div>
                     </div>
                 }
