--- a/Web.Statu/Views/Home/Reports/13_SmlouvyBezUvedeneCeny.cshtml
+++ b/Web.Statu/Views/Home/Reports/13_SmlouvyBezUvedeneCeny.cshtml
@@ -11,7 +11,7 @@
 @{
 
     var model = new HlidacStatu.Lib.Searching.SmlouvaSearchResult(this.Request.QueryString, HlidacStatu.Lib.Data.Smlouva.Search.OrderResult.DateAddedDesc);
-    model.Q = "issues.issueTypeId:100";
+    model.Q = "hint.skrytaCena:1";
     model = HlidacStatu.Lib.Data.Smlouva.Search.SimpleSearch(model.Q, model.Page,
 100, (HlidacStatu.Lib.Data.Smlouva.Search.OrderResult)(Convert.ToInt32(model.Order)), platnyZaznam: true);
 
